// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<span
  class="ant-badge"
  id="default"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.color - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.color"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.count - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.count"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="50"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        5
      </span>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        0
      </span>
    </span>
  </sup>
</span>
`;

exports[`Render properties.count: 0 - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.count: 0"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.dot: true - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.dot: true"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-dot"
    data-show="true"
  />
</span>
`;

exports[`Render properties.icon object - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.icon object"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <span
    aria-label="loading-3-quarters"
    class="anticon anticon-loading-3-quarters anticon-spin ant-scroll-number-custom-component"
    id="properties.icon object_icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
</span>
`;

exports[`Render properties.icon string - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.icon string"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <span
    aria-label="loading-3-quarters"
    class="anticon anticon-loading-3-quarters anticon-spin ant-scroll-number-custom-component"
    id="properties.icon string_icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
</span>
`;

exports[`Render properties.offset [x,y] - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.offset [x,y]"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-dot"
    data-show="true"
    style="margin-top: 10px; right: -25px;"
  />
</span>
`;

exports[`Render properties.overflowCount - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.overflowCount"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="15"
  >
    10+
  </sup>
</span>
`;

exports[`Render properties.showZero - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.showZero"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count"
    data-show="true"
    title="0"
  >
    0
  </sup>
</span>
`;

exports[`Render properties.size: small - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.size: small"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-count-sm ant-badge-multiple-words"
    data-show="true"
    title="11"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        1
      </span>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        1
      </span>
    </span>
  </sup>
</span>
`;

exports[`Render properties.status: default - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: default"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.status: error - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: error"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.status: error and text: Error! - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: error and text: Error!"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.status: processing - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: processing"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.status: success - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: success"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.title: When hovering over badge - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.title: When hovering over badge"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="When hovering over badge"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        5
      </span>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        0
      </span>
    </span>
  </sup>
</span>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.color 1`] = `true`;

exports[`Test Schema properties.color 2`] = `null`;

exports[`Test Schema properties.count 1`] = `true`;

exports[`Test Schema properties.count 2`] = `null`;

exports[`Test Schema properties.count: 0 1`] = `true`;

exports[`Test Schema properties.count: 0 2`] = `null`;

exports[`Test Schema properties.dot: true 1`] = `true`;

exports[`Test Schema properties.dot: true 2`] = `null`;

exports[`Test Schema properties.icon object 1`] = `true`;

exports[`Test Schema properties.icon object 2`] = `null`;

exports[`Test Schema properties.icon string 1`] = `true`;

exports[`Test Schema properties.icon string 2`] = `null`;

exports[`Test Schema properties.offset [x,y] 1`] = `true`;

exports[`Test Schema properties.offset [x,y] 2`] = `null`;

exports[`Test Schema properties.overflowCount 1`] = `true`;

exports[`Test Schema properties.overflowCount 2`] = `null`;

exports[`Test Schema properties.showZero 1`] = `true`;

exports[`Test Schema properties.showZero 2`] = `null`;

exports[`Test Schema properties.size: small 1`] = `true`;

exports[`Test Schema properties.size: small 2`] = `null`;

exports[`Test Schema properties.status: default 1`] = `true`;

exports[`Test Schema properties.status: default 2`] = `null`;

exports[`Test Schema properties.status: error 1`] = `true`;

exports[`Test Schema properties.status: error 2`] = `null`;

exports[`Test Schema properties.status: error and text: Error! 1`] = `true`;

exports[`Test Schema properties.status: error and text: Error! 2`] = `null`;

exports[`Test Schema properties.status: processing 1`] = `true`;

exports[`Test Schema properties.status: processing 2`] = `null`;

exports[`Test Schema properties.status: success 1`] = `true`;

exports[`Test Schema properties.status: success 2`] = `null`;

exports[`Test Schema properties.title: When hovering over badge 1`] = `true`;

exports[`Test Schema properties.title: When hovering over badge 2`] = `null`;
